crates/service/tests/references/snapshots/features__references__tag__ref_ident_idx.snap
---
source: crates/service/tests/references/tag.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 7
      },
      "end": {
        "line": 2,
        "character": 9
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 21
      },
      "end": {
        "line": 4,
        "character": 23
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 12
      },
      "end": {
        "line": 5,
        "character": 14
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 8,
        "character": 12
      },
      "end": {
        "line": 8,
        "character": 14
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 9,
        "character": 21
      },
      "end": {
        "line": 9,
        "character": 23
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 9,
        "character": 28
      },
      "end": {
        "line": 9,
        "character": 30
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 10,
        "character": 15
      },
      "end": {
        "line": 10,
        "character": 17
      }
    }
  }
]
